...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--NIBM Music-->
        <scene sceneID="l2z-gR-e3g">
            <objects>
                <tableViewController storyboardIdentifier="MainTableView" title="NIBM Music" id="UVG-FX-Z3J" customClass="MainTableView" customModule="nibmdevelopmentone" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="SuG-eB-2aw">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="separatorColor" red="0.74117647060000003" green="0.76470588240000004" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <sections>
...
                                        <rect key="frame" x="0.0" y="292" width="414" height="88"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DsG-ES-s2Q" id="uu9-y7-Thw">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Downloads" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qaY-Fv-ijN">
                                                    <rect key="frame" x="0.0" y="19" width="414" height="50.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                                    <color key="textColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        <connections>
                            <outlet property="dataSource" destination="UVG-FX-Z3J" id="XzF-e1-X4G"/>
                            <outlet property="delegate" destination="UVG-FX-Z3J" id="28Z-D4-TS0"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="NIBM" id="BcR-wd-lHx">
                        <barButtonItem key="leftBarButtonItem" title="Profile" id="UFn-Mu-39l">
                            <connections>
                                <action selector="showLogin:" destination="UVG-FX-Z3J" id="A3i-iT-XHa"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            <objects>
                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fwE-Tr-vHx" customClass="ViewController" customModule="nibmdevelopmentone" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="DcO-62-wgj">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Cn-YP-Grf">
                                <rect key="frame" x="20" y="186" width="374" height="50"/>
                                <color key="backgroundColor" red="0.74117647060000003" green="0.76470588240000004" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="mTu-hH-joJ"/>
                                </constraints>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hrb-TU-e8a">
                                <rect key="frame" x="20" y="243" width="374" height="50"/>
                                <color key="backgroundColor" red="0.74117647060000003" green="0.76470588240000004" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
...
                                <rect key="frame" x="122.5" y="508" width="169" height="54"/>
                                <color key="backgroundColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="54" id="ZjB-dq-eJf"/>
                                    <constraint firstAttribute="width" constant="169" id="rCG-Xw-3qB"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="login:" destination="fwE-Tr-vHx" eventType="touchUpInside" id="w4H-rN-lMF"/>
                                </connections>
                            </button>
...
