...
        statusLabel.text = "Logging In"
        
        loadingActivity.startAnimating()
        
        guard let userName = userName.text, !userName.isEmpty,
            let password = password.text, !password.isEmpty else {
                presentAlert(with: "Missing Credentials", message: "Missing User Name Or Password")
                return
        }
        
        guard expectedUserName == userName else {
            presentAlert(with: "Invalid Credentials", message: "Invalid User Name")
            return
...
        }
    }
    
    private func presentAlert(with title: String, message: String) {
        let alertVC = UIAlertController(title: title, message: message, preferredStyle: .alert)
        
        alertVC.addAction(.init(title: "Ok", style: .default, handler: nil))
        
        present(alertVC, animated: true, completion: nil)
    }
}

extension ViewController: UITextFieldDelegate {
...
