//
//  nibmdevelopmentoneUITests.swift
//  nibmdevelopmentoneUITests
//
//  Created by thusitha on 8/15/20.
//  Copyright © 2020 nibm. All rights reserved.
//

import XCTest

class nibmdevelopmentoneUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    func testInvalidLogin_CredentialsAlertShown() {
        let app = XCUIApplication()
        app.launch()
        app.navigationBars["NIBM Music"].buttons["Profile"].tap()
        app.textFields["Username"].tap()
        app.buttons["Login"].tap()
        
        let alertDialog = app.alerts["Missing Credentials"]
        
        XCTAssertTrue(alertDialog.exists)
        
        alertDialog.buttons["Ok"].tap()
    }

    func testExample() throws {
        // UI tests must launch the application that they test.

        let validPassword = "123456"
        let validUsername = "nibm"
        
        let app = XCUIApplication()
        app.launch()
        app.navigationBars["NIBM Music"].buttons["Profile"].tap()
        
        
        let userNameTextField = app.textFields["Username"]
        XCTAssertTrue(userNameTextField.exists)
        
        userNameTextField.tap()
        
        userNameTextField.typeText(validUsername)
        
        let passwordSecureTextField = app.secureTextFields["Password"]
        XCTAssertTrue(passwordSecureTextField.exists)
        passwordSecureTextField.tap()
        passwordSecureTextField.typeText(validPassword)
        
        app.buttons["Login"].tap()
        
        let downloadCell = app.tables.staticTexts["My Downloads"]
        
        let exists = NSPredicate(format: "exists == 1")

        expectation(for: exists, evaluatedWith: downloadCell, handler: nil)
        waitForExpectations(timeout: 5, handler: nil)
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
